	When the simulation was stopped, charts would disappear.  (Fixed).
	Slight speed tweaks to Bag, IntBag, and DoubleBag remove(...).
        javac has grown up and jikes has fallen into disrepair.  We move
                ECJ's default compiler to javac -target 1.3 -source 1.3
	Updates to MersenneTwisterFast
	Added indent to make dist
	Tweaks to make jar so we add a manifest which fires up a default form
		of MASON if double-clicked on.
	Modified Display2D's checking for iText so it doesn't bomb if iText isn't
		there!
	Bug fix so the options button on Display3D appears properly
	ChartGenerator: Added log-axis check-boxes
	Fixed import statements in Display3D to eliminate an ambiguity error:
		[Console: sim.display / java.io]
	HistogramSeriesAttributes: replaced the call to getSeriesPaint() with
		getItemPaint(), in order to make it work with version 1.0.6 of 
		jfreechart, while keeping it backward compatible 
		(tested with version 1.0.1 of jfreechart).
	SeriesAttributes: isolated getPlot().getRenderer() in a function
		(XYItemRenderer getRenderer()) to allow extensions to handle multiple 
		renderers.  The change affects HistogramSeriesAttributes and
		TimeSeriesAttributes.
	HistogramGenerator: fixed a bug in removeSeries to preserve the
		attributes of the remaining series.	
	HistogramSeriesAttributes: fixed a bug with the series name being null
		in the remove series confirmation dialog
	TimeSeriesAttributes: same underlying problem as before: null returned by
		getSeriesPaint()  (which caused a missmatch between a series' color and the
		initial color in the color well in the attribute inspector for that series).
	HistogramGenerator: added function addSeriesToDataSet to isolate
		dataset.addSeries behavior, so it can be changed later (instead of 
		overriding the entire update() function.
	ChartGenerator: legend is now build based on the XYPlot, not just its
		main renderer; series using different renderers will all be included
		in the legend now.
	